--- a/greenprimer/static/analyzer/sass/dashboard.sass
+++ b/greenprimer/static/analyzer/sass/dashboard.sass
@@ -1,7 +1,86 @@
+@import "analyzer/sass/constants"
+
+$pad: 8px
+$joy: 40%
+
 #dashboard
-  position: absolute
+  position: fixed
   bottom: 0
   left: 0
-  right: 150px
-  background: blue
-  height: 100px
+  right: $toolbar-width
+  padding-right: $overlap
+  background: $main
+  height: $dashboard-height
+  border-top: 4px solid $warm-lightest
+
+  #bounds, #modes
+    position: absolute
+    bottom: $pad
+    top: $pad
+    width: $dashboard-height - (2 * $pad)
+    height: $dashboard-height - (2 * $pad)
+    border: 3px solid $darkest
+    border-radius: 50%
+
+  #bounds
+    left: $pad
+    background: rgba(0, 0, 0, .7)
+
+    #joystick
+      position: absolute
+      left: 50%
+      top: 50%
+      margin-top: -($joy / 2)
+      margin-left: -($joy / 2)
+      width: $joy
+      height: $joy
+      background: #222222
+      background-image: url(analyzer/img/thatch.png)
+      border: 3px solid black
+      box-sizing: border-box
+      border-radius: 50%
+
+  #modes
+    right: $pad + $overlap
+
+    .upper, .lower, .middle
+      text-align: center
+      position: absolute
+      @include darkbutton
+
+    $half: ($dashboard-height - (2 * $pad)) / 2
+    $third: ($dashboard-height - (2 * $pad)) / 2.5
+
+    .upper, .lower
+      width: 100%
+      height: 50%
+      box-sizing: border-box
+      z-index: 4
+
+    .upper
+      top: 0
+      border-top-left-radius: $half
+      border-top-right-radius: $half
+      border-bottom-width: 1px
+      padding-bottom: 1em
+
+    .lower
+      bottom: 0
+      border-bottom-left-radius: $half
+      border-bottom-right-radius: $half
+      border-top-width: 1px
+      padding-top: 1em
+
+    .middle
+      width: $third
+      height: $third
+      border-radius: $third/2
+      left: 50%
+      top: 50%
+      z-index: 5
+      margin-left: -($third/2)
+      margin-top: -($third/2)
+      padding: 0
+  
+  #layers
+    display: none
