--- a/greenprimer/static/analyzer/sass/toolbar.sass
+++ b/greenprimer/static/analyzer/sass/toolbar.sass
@@ -1,21 +1,60 @@
+@import "analyzer/sass/constants"
+
+$buttonheight: 40px
+$innerpad: 0
+$outerpad: 1px
+$height: (($buttonheight + $innerpad) * 6) + ($outerpad * 2)
+
 #toolbar
-  position: absolute
-  background: blue
+  position: fixed
+  background: $main
+  border-left: 4px solid $warm-lightest
   right: 0
   top: 0
-  bottom: 100px
-  width: 150px
+  bottom: $dashboard-height
+  padding-bottom: $overlap
+  width: $toolbar-width
+  overflow: auto
+
+  .fadeup
+    position: absolute
+    top: 0
+    bottom: 50%
+    width: 100%
+    margin-bottom: $height / 2
+    background: $main
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#{$main}', endColorstr='#{$warm}')
+    background: -webkit-gradient(linear, left bottom, left top, from($warm), to($main))
+    background: -moz-linear-gradient(top, $main, $warm)
+
+  .fadedown
+    position: absolute
+    bottom: 0
+    top: 50%
+    width: 100%
+    margin-top: $height / 2
+    background: $main
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#{$warm}', endColorstr='#{$main}')
+    background: -webkit-gradient(linear, left bottom, left top, from($main), to($warm))
+    background: -moz-linear-gradient(top, $warm, $main)
 
   .buttons
-    position: relative
-    margin-top: 25%
+    position: absolute
+    height: $height - (2 * $outerpad)
+    top: 50%
+    margin-top: -$height / 2
+    border: $outerpad solid $warm-lightest
+      left: 0
+      right: 0
 
     button
       width: 100%
-      height: 40px
-      max-height: 20%
-      background: gray
-      border: 1px solid black
+      height: $buttonheight
+      @include button
+      border-width: 1px
+      border-left: 0
+      border-right: 0
+      margin-bottom: $innerpad
 
       .icon
         display: none
