--- a/greenprimer/static/analyzer/sass/key.sass
+++ b/greenprimer/static/analyzer/sass/key.sass
@@ -99,26 +99,17 @@ button#load
     image: url(analyzer/img/open.png)
     position: 30% 50%
 
-button#fullscreen
-  background:
-    image: url(analyzer/img/fullscreen.png)
-    position: 55% 50%
+//button#fullscreen
+  //background:
+    //image: url(analyzer/img/fullscreen.png)
+    //position: 55% 50%
 
-button#exit
-  color: rgba(0, 0, 0, .8)
+button#exit, button#calculate
+  color: rgba(0, 0, 0, .5)
   &:hover
     color: black
   &:active
     color: black
 
-#key
-  #hide
-    display: block
-  #show
-    display: none
-#key.hidden
-  #hide
-    display: none
-  #show
-    display: block
-
+#show
+  display: none
