--- a/greenprimer/static/analyzer/sass/key.sass
+++ b/greenprimer/static/analyzer/sass/key.sass
@@ -104,7 +104,7 @@ button#load
     //image: url(analyzer/img/fullscreen.png)
     //position: 55% 50%
 
-button#exit, button#calculate
+button#exit, button#data
   color: rgba(0, 0, 0, .5)
   &:hover
     color: black
