--- a/greenprimer/static/analyzer/sass/base.sass
+++ b/greenprimer/static/analyzer/sass/base.sass
@@ -20,12 +20,13 @@
   height: 4096px
   z-index: 0
 
-  svg
+  svg, canvas
     position: absolute
     top: 0
     left: 0
     width: 100%
     height: 100%
+    
 
 #viewport
   position: absolute
