--- a/greenprimer/static/analyzer/sass/layout.sass
+++ b/greenprimer/static/analyzer/sass/layout.sass
@@ -1,19 +1,34 @@
 .wall
-  :stroke #8a360f
-  :stroke-width 4pt
-  :z-index 50
+  stroke: #8a360f
+  stroke-width: 4pt
+  z-index: 50
 
-.wall:hover
-  :stroke #Ca764f
+  &:hover
+    stroke: #Ca764f
 
 .joint
-  :fill black
-  :z-index 100
+  fill: black
+  z-index: 100
 
-.joint:hover
-  :fill #666
-  :stroke #666
+  &:hover
+    fill: #666
+    stroke: #666
 
 .guide
-  :fill black
-  :opacity .5
+  fill: black
+  opacity: .5
+
+circle.vent
+  fill: gray
+  stroke: gray
+  z-index: 100
+
+  &:hover
+    fill: green
+
+path.vent
+  stroke: black
+  stroke-width: 3pt
+
+.surreal
+  opacity: .5
