--- a/greenprimer/static/analyzer/sass/toolbar.sass
+++ b/greenprimer/static/analyzer/sass/toolbar.sass
@@ -36,12 +36,18 @@ $space: .5em
       border-radius: 0
       border-width: 1px
 
-    #select
-      width: $bwidth
+    #move
+      width: ($bwidth / 2) + 1
+      margin-right: -2px
       border-top-left-radius: $bradius
-      border-top-right-radius: $bradius
       border-top-width: 2px
       border-left-width: 2px
+
+    #delete
+      width: ($bwidth / 2)
+      margin-left: -1px
+      border-top-right-radius: $bradius
+      border-top-width: 2px
       border-right-width: 2px
 
     #wall
