--- a/greenprimer/static/analyzer/sass/layout.sass
+++ b/greenprimer/static/analyzer/sass/layout.sass
@@ -35,4 +35,8 @@ path.vent
 
 .window
   stroke: lightblue
-  stroke-width: 5pt
+  stroke-width: 6pt
+
+.door
+  stroke: lighten(#8a360f, 50%)
+  stroke-width: 6pt
