vents are on walls and spray multi directions. Doors don't wall. Layout is big.

--- a/greenprimer/static/analyzer/sass/layout.sass
+++ b/greenprimer/static/analyzer/sass/layout.sass
@@ -18,15 +18,16 @@
   fill: black
   opacity: .5
 
-circle.vent
+path.line.vent
   fill: gray
   stroke: gray
+  stroke-width: 6pt
   z-index: 100
 
   &:hover
     fill: green
 
-path.vent
+path.pointer.vent
   stroke: black
   stroke-width: 3pt
 
