--- a/greenprimer/static/analyzer/sass/dashboard.sass
+++ b/greenprimer/static/analyzer/sass/dashboard.sass
@@ -66,6 +66,15 @@ $joy: .4 * $circle
       box-sizing: border-box
       z-index: 4
 
+    .whole
+      top: 0
+      width: 100%
+      height: 100%
+      border-radius: $half
+      box-sizing: border-box
+      z-index: 4
+      @include darkbutton
+
     .upper
       top: 0
       border-top-left-radius: $half
