--- a/greenprimer/static/analyzer/sass/demo.sass
+++ b/greenprimer/static/analyzer/sass/demo.sass
@@ -4,8 +4,8 @@
   position: absolute
   top: 0
   left: 0
-  right: $toolbar-width + $ui-border
-  bottom: $dashboard-height + $ui-border
+  right: 0
+  bottom: 0
   z-index: 1
   overflow: auto
 
@@ -16,8 +16,8 @@
 #layout
   background: url(analyzer/img/grid.png) repeat
   position: absolute
-  width: 2048px
-  height: 2048px
+  width: 100%
+  height: 100%
   z-index: 0
 
   svg, canvas
