--- a/greenprimer/static/media/sass/home.sass
+++ b/greenprimer/static/media/sass/home.sass
@@ -83,6 +83,30 @@ body, html, #main
         ul
           list-style: none
 
+  #options
+    width: 80%
+    margin: 0 auto
+      top: 3em
+    border: 1px solid black
+
+    .odd
+      background: #cef
+
+    .even
+      background: white
+
+    .name
+      width: 100%
+
+    .link
+      text-align: right
+      padding-right: 1em
+
+    a
+      text-decoration: none
+      &:hover
+        text-decoration: underline
+
 
 #register, #create
   border-radius: 9px
