--- a/greenprimer/static/jquery/ui/mytheme.css
+++ b/greenprimer/static/jquery/ui/mytheme.css
@@ -231,3 +231,7 @@ input.ui-button { padding: .4em 1em; }
 .ui-icon-grip-solid-horizontal { background-position: -48px -224px; }
 .ui-icon-gripsmall-diagonal-se { background-position: -64px -224px; }
 .ui-icon-grip-diagonal-se { background-position: -80px -224px; }
+
+/* Buttonset */
+.ui-helper-hidden { display: none; }
+.ui-helper-hidden-accessible { position: absolute; left: -99999999px; }
