--- a/greenprimer/static/media/sass/properties.sass
+++ b/greenprimer/static/media/sass/properties.sass
@@ -100,7 +100,10 @@ span.unit
       text-align: center
 
 #save, #cancel
-  margin: 0 1em
+  margin: 1em
+    top: 0
+  font-family: sans-serif
+  box-sizing: border-box
 #save
   float: right
 #cancel
