--- a/greenprimer/static/analyzer/sass/layout.sass
+++ b/greenprimer/static/analyzer/sass/layout.sass
@@ -6,6 +6,13 @@
   &:hover
     stroke: #Ca764f
 
+.wall.outer
+  stroke: darken(#8a360f, 20%)
+  stroke-width: 6pt
+
+  &:hover
+    stroke: darken(#Ca764f, 20%)
+
 .joint
   fill: black
   z-index: 100
@@ -33,11 +40,3 @@ path.pointer.vent
 
 .surreal
   opacity: .5
-
-.window
-  stroke: lightblue
-  stroke-width: 6pt
-
-.door
-  stroke: lighten(#8a360f, 50%)
-  stroke-width: 6pt
