coloring of disjoint sections

--- a/greenprimer/static/analyzer/sass/layout.sass
+++ b/greenprimer/static/analyzer/sass/layout.sass
@@ -13,6 +13,12 @@
   &:hover
     stroke: darken(#Ca764f, 20%)
 
+.wall.disjoint
+  stroke: #CC0
+
+  &:hover
+    stroke: darken(#CC0, 20%)
+
 .joint
   fill: black
   z-index: 100
