added vent placement errors

--- a/greenprimer/static/analyzer/sass/layout.sass
+++ b/greenprimer/static/analyzer/sass/layout.sass
@@ -37,6 +37,12 @@ path.line.vent
   stroke-width: 6pt
   z-index: 100
 
+  &.disjoint
+    stroke: #AA0
+
+  &.outer
+    stroke: #900
+
   &:hover
     fill: green
 
