--- a/greenprimer/static/media/sass/properties.sass
+++ b/greenprimer/static/media/sass/properties.sass
@@ -139,3 +139,56 @@ span.unit
   text-align: center
   zoom: 1
   overflow: visible
+
+#id_zone
+  margin-right: 1em
+
+#zoning
+  display: none
+  z-index: 10
+  position: fixed
+  top: 0
+  left: 0
+  width: 100%
+  height: 100%
+
+  #overlay
+    width: 100%
+    height: 100%
+    background: black
+    opacity: .8
+
+  #bg
+    z-index: 11
+    left: 10%
+    top: 10%
+    width: 80%
+    height: 80%
+    position: absolute
+    margin: 0 auto
+    background: white
+    border-radius: 1em
+    text-align: center
+
+  .zoneimgs
+    position: relative
+    height: 83%
+    margin-bottom: 3em
+    clear: both
+
+  .zoneimg
+    display: none
+    height: 100%
+
+  .fields
+    clear: both
+    text-align: center
+
+    .slider
+      width: 50%
+      left: 25%
+      margin-top: 10px
+
+    button
+      float: right
+      margin-right: 1em
