--- a/greenprimer/static/analyzer/sass/_constants.sass
+++ b/greenprimer/static/analyzer/sass/_constants.sass
@@ -14,6 +14,12 @@ $warm-lightest: #C9F76F
 $warm-dark: #86B32D
 $warm-darkest: #679B00
 
+$main-red: #CC0000
+$light-red: #E63939
+$lightest-red: #E66767
+$dark-red: #992626
+$darkest-red: #850000
+
 @mixin button
   background:
     image: none
