This battle station is fully operational.

--- a/greenprimer/static/analyzer/sass/other.sass
+++ b/greenprimer/static/analyzer/sass/other.sass
@@ -121,6 +121,10 @@
       color: #C00
 
 #dialog
+  .message
+    overflow: auto
+    height: 90%
+
   h3
     background: $main
     cursor: pointer
@@ -157,3 +161,9 @@
         color: $light-red
   .ui-accordion-content.red
     border-color: $darkest-red 
+
+  .tab
+    margin-left: 3em
+
+  .dollars
+    float: right
