--- a/greenprimer/static/analyzer/sass/layout.sass
+++ b/greenprimer/static/analyzer/sass/layout.sass
@@ -14,10 +14,10 @@
     stroke: darken(#Ca764f, 20%)
 
 .wall.disjoint
-  stroke: #CC0
+  stroke: #EE0
 
   &:hover
-    stroke: darken(#CC0, 20%)
+    stroke: darken(#EE0, 20%)
 
 .joint
   fill: black
