--- a/greenprimer/static/analyzer/sass/other.sass
+++ b/greenprimer/static/analyzer/sass/other.sass
@@ -14,12 +14,19 @@
   font-weight: bolder
   color: white
   cursor: pointer
+  border: 1px solid black
   &.L1
-    background: #CC0
+    background: #EE0
+    color: black
+    border-color: darken(#EE0, 30%)
   &.L2
     background: #f84
+    color: white
+    border-color: darken(#f84, 30%)
   &.L3
     background: #C00
+    color: white
+    border-color: darken(#C00, 30%)
 
 #overlay
   position: fixed
@@ -112,7 +119,7 @@
         left: 0
 
     li.L1
-      color: #CC0
+      color: #EE0
 
     li.L2
       color: #f84
