Made the yellow text less garish

--- a/greenprimer/static/analyzer/sass/other.sass
+++ b/greenprimer/static/analyzer/sass/other.sass
@@ -120,12 +120,18 @@
 
     li.L1
       color: #EE0
+      p
+        color: darken(#EE0, 20%)
 
     li.L2
       color: #f84
+      p
+        color: darken(#f84, 20%)
 
     li.L3
       color: #C00
+      p
+        color: darken(#C00, 20%)
 
 #dialog
   .message
